# qdrant-fabric

./: .env.example  .gitignore  EXTRACTION_STATUS.md  GITHUB_REPO.md  LEARNING_GUIDE.md  LICENSE  PHASE1_COMPLETE.md  PHASE1_STATUS.md  PHASE1_SUMMARY.txt  QDRANT_CAPABILITIES.md  README.md  RENAME_SUMMARY.md  SUMMARY.md  TESTING_WITH_CLAUDE_DESKTOP.md  extract_qdrant_knowledge.py  pyproject.toml  test_cloud_connection.py  test_db_needed.py  test_mcp_server.sh  test_phase1_tools.py
docs/: API_COVERAGE_PLAN.md
src/qdrant_mcp/: __init__.py  __main__.py  config.py  server.py
src/qdrant_mcp/cloud/: __init__.py
src/qdrant_mcp/database/: __init__.py  client.py  collections.py  health.py  index.py  payload.py  points.py  search.py  vectors.py
tests/: __init__.py
tests/test_cloud/: __init__.py
tests/test_database/: __init__.py  test_client.py
